--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,7 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.card-dashboard {
+    @apply bg-white rounded-2xl border border-slate-200 shadow-lg p-6 h-full flex flex-col items-center justify-center gap-2 hover:shadow-xl transition duration-300
+}
